2003-11-21 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslAttribute.cs : Name verification.
	* XslElement.cs : Name verification. Consider IsEmptyElement.
	* XslCopy.cs : copy namespace nodes too.

2003-11-09 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslAttribute.cs : namespace should be String.Empty if no specification
	  exists.
	* XslNumber.cs : default format string is "1". See XSLT spec. 7.7.1.

2003-11-03 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCompiledElement.cs, XslAttribute.cs, XslElement.cs :
	  Removed Clone() everywhere. Limited only to required places.

2003-11-02 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCompiledElement.cs : Added InputNode for namespace-prefix support.
	* XslAttribute.cs, XslElement.cs, XslLiteralElement.cs :
	  Correct Prefix support.
	* XslLiteralElement.cs : Moved xmlns output after attribute sets.
	* XslCopy.cs : Added use-attribute-sets support for Root XPath type.
	* XslCopy.cs, XslCopyOf.cs, XslLiteralElement.cs : Support for
	  IsEmptyElement (XslElement not yet. confirm what OASIS tests expect).
	* XslCopy.cs, XslElement.cs, XslLiteralElement.cs : 
	  Support for stylesheet xmlns decls emission.

2003-09-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslAttribute.cs, XslElement.cs: Allow dynamically parsed names.

2003-09-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslCopyOf.cs: handle attributes.

2003-09-15 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslLiteralElement.cs: must evaluate used attr sets *BEFORE*
	children (so that they get overriden).

2003-09-14 Oleg Tkachenko <oleg@tkachenko.com>
	
	* XslCopyOf.cs - WriteAttributeString instead of 
	WriteStartAttribute/WriteString/WriteEndAttribute.

2003-09-13 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslLiteralElement.cs: reduce enumerator allocation.

2003-08-30 Oleg Tkachenko <oleg@tkachenko.com>

	* XslAttribute.cs: output is now done to TextOutputter, which outputs 
	to a StringWriter.