@@ -43,9 +43,12 @@ namespace Mono.Xml.Xsl.Operations {
 				if (children != null) children.Evaluate (p);
 				break;
 			case XPathNodeType.Element:
+				bool cdataStarted = false;
+				if (!p.InsideCDataElement && p.PushCDataState (p.CurrentNode.LocalName, p.CurrentNode.NamespaceURI))
+					cdataStarted = true;
 				p.Out.WriteStartElement (p.CurrentNode.Prefix, p.CurrentNode.LocalName, p.CurrentNode.NamespaceURI);
 				
-				p.TryStylesheetNamespaceOutput ();
+				p.TryStylesheetNamespaceOutput (null);
 				if (useAttributeSets != null)
 					foreach (XmlQualifiedName s in useAttributeSets)
 						p.ResolveAttributeSet (s).Evaluate (p);
@@ -58,7 +61,10 @@ namespace Mono.Xml.Xsl.Operations {
 				}
 			
 				if (children != null) children.Evaluate (p);
+
 				p.Out.WriteFullEndElement ();
+				if (cdataStarted)
+					p.PopCDataState ();
 				break;
 			case XPathNodeType.Attribute:
 				p.Out.WriteAttributeString (p.CurrentNode.Prefix, p.CurrentNode.LocalName, p.CurrentNode.NamespaceURI, p.CurrentNode.Value);
