@@ -1,3 +1,13 @@
+2003-11-24 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
+
+	* XslAttribute.cs, XslElement.cs, XslLiteralElement.cs :
+	  More precise namespace handling.
+	* XslCopy.cs, XslElement.cs, XslLiteralElement.cs :
+	  Added cdata-section-elements support.
+	* XslNumber.cs :
+	  Cases when value is NodeSet should be allowed.
+	  Default output should be 1,2,3... not exception. see XSLT spec 7.7.1
+
 2003-11-21 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
 
 	* XslAttribute.cs : Name verification.
